kubernetes/kube-prod-d1/sonarr/prod-d1/ani-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: anisonarr
  name: anisonarr
  namespace: sonarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anisonarr
  template:
    metadata:
      labels:
        app: anisonarr
    spec:
      containers:
        - name: anisonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
          - name: http
            containerPort: 8989
          volumeMounts:
          - name: anisonarr-config
            mountPath: /config
          - name: data
            mountPath: /data
      volumes:
        - name: anisonarr-config
          persistentVolumeClaim:
            claimName: anisonarr-pvc
            readOnly: false
        - name: anisonarr-backup-storage ## Uncomment this and set claimname to PVC
          persistentVolumeClaim:
            claimName: pvc-ce60dadf-220e-48a4-9cd5-f325c474253a
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.5
            path: /mnt/user/video/
