kubernetes/kube-prod-d1/sonarr/prod-d1/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr-statefulset
  namespace: sonarr-prod-d1
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr-prod-d1
    app.kubernetes.io/component: program
    app.kubernetes.io/managed-by: argocd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: sonarr-service
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr-prod-d1
        app.kubernetes.io/component: program
        app.kubernetes.io/managed-by: argocd
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19@sha256:82172b363f9eddc02aca544f880a044f2ceb9aaf190bc87e4454e2f705eb91d0
          imagePullPolicy: IfNotPresent
          # securityContext:
          #   runAsNonRoot: false
          #   allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 8989

          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 2

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10

          # resources:
          #   requests:
          #     memory: "256Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "500m"

          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: data
              mountPath: /data
      
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - sonarr
              topologyKey: kubernetes.io/hostname

      priorityClassName: low-priority
      
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      
      volumes:
        - name: data
          nfs:
            server: 10.15.21.5
            path: /mnt/user/video/
  volumeClaimTemplates:
    - metadata:
        name: sonarr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 450Mi
