kubernetes/kube-prod-d1/sonarr/prod-d1/cilium-deny-all-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr-cilium-deny-all-network-policy
  namespace: sonarr-prod-d1
spec:
  endpointSelector: {}
  ingress: []
  egress: []
