kubernetes/kube-prod-d1/sonarr/prod-d1/cillium-app-allow-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr-cillium-app-allow-network-policy
  namespace: sonarr-prod-d1
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/component: program

  ingress:
    # Traefik -> App
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP

  egress:
    # App -> Postgres
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr-prod-d1
            app.kubernetes.io/name: sonarr
            app.kubernetes.io/component: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    # App -> DNS (UDP+TCP)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"

    # App -> Internet
    - toEntities:
        - world
